# comexpy

./: .zenodo.json  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
docs/: getting-started.md  guide.md  index.md  reference.md
getting-started/: index.html
guide/: index.html
reference/: index.html
search/: search_index.json
src/comexpy/: __init__.py  _client.py  _format.py  _msg.py  historical.py  query.py  query_city.py  tables.py  tables_classifications.py  tables_products.py
tests/: test_client.py  test_format.py  test_queries.py
